2005-12-29  Roland McGrath  <roland@frob.com>

	* sysdeps/posix/libc_fatal.c (__libc_message): Add a const, a cast.

	* hurd/lookup-retry.c (__hurd_file_name_lookup_retry): Fix cast.
	* hurd/report-wait.c (_S_msg_report_wait): Likewise.

	* include/sys/xattr.h: New file.

2005-12-28  Roland McGrath  <roland@redhat.com>

	* hurd/sigunwind.c: Include <stdint.h>.
	* sysdeps/mach/hurd/jmp-unwind.c: Likewise.

2005-12-28  Ulrich Drepper  <drepper@redhat.com>

	* nscd/selinux.c (log_callback): Use audit_log_user_avc_message.
	Don't do anything if audit_fd is invalid.
	(audit_init): Don't complain if kernel support is missing.
	Patch by Steve Grubb <sgrubb@redhat.com>.

	* sysdeps/i386/__longjmp.S [PTR_DEMANGLE]: Also demangle stack
	pointer.  Add CFI.
	* sysdeps/i386/bsd-_setjmp.S [PTR_MANGLE]: Also mangle stack pointer.
	* sysdeps/i386/bsd-setjmp.S: Likewise.
	* sysdeps/i386/setjmp.S: Likewise.

	* sysdeps/x86_64/__longjmp.S: No need to make sure return value is
	!= 0, the caller did that.

2005-12-27  Roland McGrath  <roland@redhat.com>

	* sysdeps/x86_64/__longjmp.S: Don't confuse unwinder by loading
	mangled values in %rbp and %rsp registers and by wrong cfi.

	* config.make.in (c++-sysincludes): New substituted variable.
	* configure.in (CXX_SYSINCLUDES): New substituted variable.
	* configure: Regenerated.
	* Makeconfig (CXXFLAGS): Prepend $(c++-sysincludes) here.

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h
	(PTR_MANGLE): Fix cast.

	* sysdeps/alpha/bits/setjmp.h (_JMPBUF_UNWINDS): Take third argument
	DEMANGLE, and pass SP value through it.
	* sysdeps/hppa/bits/setjmp.h (_JMPBUF_UNWINDS): Likewise.
	* sysdeps/i386/bits/setjmp.h (_JMPBUF_UNWINDS): Likewise.
	* sysdeps/m68k/bits/setjmp.h (_JMPBUF_UNWINDS): Likewise.
	* sysdeps/mips/bits/setjmp.h (_JMPBUF_UNWINDS): Likewise.
	* sysdeps/powerpc/bits/setjmp.h (_JMPBUF_UNWINDS): Likewise.
	* sysdeps/s390/bits/setjmp.h (_JMPBUF_UNWINDS): Likewise.
	* sysdeps/sh/bits/setjmp.h (_JMPBUF_UNWINDS): Likewise.