@@ -1,0 +1,1 @@
+/* No definition of `errno' variable on the Hurd.  */
